prevented scrolling and zooming on mobile (and a bit of model styling)

--- a/app/styles/game.css
+++ b/app/styles/game.css
@@ -25,6 +25,11 @@ svg.game-entities {
   left: 0;
 }
 
-.inf {
 
+.model {
+  stroke: black;
+  fill: green;
+  stroke-width: 1.5;
+  vector-effect: non-scaling-stroke;
 }
+
